--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -155,7 +155,7 @@ body {
 /* FIGHT|ARENA */
 .attackPage {
     font-size: 1.4rem;
-    text-align: center;*
+    text-align: center;
 }
 
 .roundTitle {
