--- a/src/View/Fighters/fighterslist.html.twig
+++ b/src/View/Fighters/fighterslist.html.twig
@@ -17,9 +17,9 @@
                 />
                 <figcaption class="card-caption">
                     <ul class="card-fighter-skills">
-                        <li>🥊{{fighter.attack}}</li>
-                        <li>🛡️{{fighter.defense}}</li>
-                        <li>❤️100</li>
+                        <li>🥊<br>{{fighter.attack}}</li>
+                        <li>🛡️<br>{{fighter.defense}}</li>
+                        <li>❤️<br>100</li>
                     </ul>
                 </figcaption>
             </figure>
