change id grid on class grid

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -235,7 +235,7 @@ progress {
     padding: 0.5rem;
   }
 
-  #grid {
+  .grid {
     display: grid;
     grid-template-columns: 50% auto;
     grid-row-gap: 1rem;
