--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -56,16 +56,17 @@
         {% endif %}
     </div>
 
-    <form class="grid" action="/fight" method="GET">
-        {% if adversary.life == 0 %}
-            <button class='resultButton attackButton' type='submit' name='winner' value='{{currentAttacker.name}}'>RESULT !</button>
-        {% else %}
+    {% if adversary.life == 0 %}
+        <form class='flex' action='/fight' method='GET'>
+             <button class='resultButton attackButton' type='submit' name='winner' value='{{currentAttacker.name}}'>RESULT !</button>
+    {% else %}
+        <form class="grid" action="/fight" method="GET">
             <button class='attackButton' type="submit" name="attack" value="punch" >PUNCH !</button>
             <button class='attackButton' type="submit" name="attack" value="kick" >KICK !</button>
             <button class='attackButton' type="submit" name="attack" value="headbutt" >HEADBUTT!</button>
             <button class='attackButton' type="submit" name="attack" value="teatime" >TEATIME !</button>
-        {% endif %}
-    </form>
-    
+    {% endif %}
+         </form>
+
 </main>
 {% endblock %}
