--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,7 +36,7 @@ body {
 /* NAVBAR */
   
 .menu {
-    height: 100%;
+    height: 115%;
     padding: 0;
     margin: 0;
     display: flex;
@@ -44,8 +44,8 @@ body {
     flex-direction: column;
     list-style-type: none;
     text-align: center;
-    min-width: 40vw;
-    font-size: 1.5rem;
+    min-width: 50vw;
+    font-size: 1.7rem;
     line-height: 2rem;
 }
 
@@ -101,7 +101,7 @@ body {
 }
 .img-home {
   display: flex;
-  margin: 1rem;
+  margin: 0rem;
 }
 #marjorie, #hudson, #romain, #enola {
   display: none;
@@ -496,6 +496,10 @@ tfoot {
 /* HOME */
 #hudson, #enola {
   display: initial;
+}
+.img-home {
+  display: flex;
+  margin: 1rem;
 }
 /* END HOME */
 /* PICK FIGHTER */
