change svg return button size and position

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,10 +25,11 @@ body {
 
 .returnButton {
     position: fixed;
-    width: 3rem;
-    height: 3rem;
-    bottom: 2rem;
-    right: 1rem;
+    background-color:var(--white);
+    width: 4rem;
+    height: 4rem;
+    bottom: 1.5rem;
+    left: 1rem;
     border: var(--primaryBorder);
     box-shadow: 3px 3px var(--black);
 }
