--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -9,12 +9,12 @@
 <main class='result'>
 
     <figure class='winner'>
-        <figcaption>WINNER 🏆{{winner.name}} <br>❤ {{winner.life}}</figcaption>
+        <figcaption>WINNER 🏆: {{winner.name}} <br>❤ {{winner.life}}</figcaption>
         <img src="/assets/images/{{winner.name|lower}}.svg" class ="winnerImage">
     </figure>
 
     <figure class='loser'>
-        <figcaption>LOSER 💀{{loser.name}} <br>❤ {{loser.life}}</figcaption>
+        <figcaption>LOSER 💀: {{loser.name}} <br>❤ {{loser.life}}</figcaption>
         <img src="/assets/images/{{loser.name|lower}}.svg" class ="loserImage">
     </figure>
 
