separated annouce into 2 p

--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -23,7 +23,8 @@
 <div class='fightDetails'>
 
     <div class='announce'>
-        <p>K.O in {{round}} rounds !! Elementary my dear ! 🧐</p>
+        <p>K.O in {{round}} rounds !! </p>
+        <p>Elementary my dear ! 🧐</p>
     </div>
 
 </div>
