adapted font size to devices

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -336,6 +336,11 @@ progress {
   text-align: center;
 }
 
+.announce p{
+  margin :0;
+  padding:0;
+}
+
 /* END WIN */
 /* PICK FIGHT|HISTORY*/
 .fightsHistoryTitle {
@@ -531,6 +536,10 @@ tfoot {
 .winnerImage {
   height: 24vh;
   padding-bottom: 4rem;
+}
+
+.announce {
+  font-size: 4rem;
 }
 /* END WIN */
 /* PICK FIGHT|HISTORY*/
