--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -363,6 +363,7 @@ tr, td {
     font-size: 1.5rem;
     padding: 1rem;
     border: var(--primaryBorder);
+    text-align: center;
 }
 
 thead,
@@ -425,7 +426,6 @@ tfoot {
     padding-top: 2rem;
     display: block;
     font-size: 2rem;
-    max-width: 30ch;
     margin: auto;
     text-align: center;
     text-decoration: none;
