--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -504,7 +504,7 @@ tfoot {
 
 /* Medium devices (tablets, 768px and up) */
 
-@media screen and (min-width: 768px) and (min-height: 1000px) {
+@media screen and (min-width: 768px) {
 /* NAVBAR */
 .menu {
     display: flex;
@@ -572,7 +572,7 @@ tfoot {
 
 /* Large devices (desktops, 992px and up) */
 
-@media screen and (min-width: 992px) and (min-height: 1000px){
+@media screen and (min-width: 992px) {
 /* NAVBAR */
 
 /* END NAVBAR */
