created Help button and display it in fight display

--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -2,6 +2,7 @@
 {% block title %}{{player1.name|upper}} VS {{player2.name|upper}}{% endblock %}
 {% block content %}
 <main class='attackPage'>
+{% include '/Item/helpButton.html.twig'%}
 
 <div class="arena">
     <div class='players'>
