--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -372,7 +372,7 @@ progress {
   font-size: 2rem;
   color: var(--white);
   padding: 0.8rem;
-  background-color:var(--primaryColor);
+  background-color:var(--secondaryColor);
   box-shadow: var(--primaryBoxShadow);
   text-align: center;
 }
