--- a/src/View/Item/helpButton.html.twig
+++ b/src/View/Item/helpButton.html.twig
@@ -1,3 +1,37 @@
-<form action="" method="POST">
-    <button class="returnButton" type="submit"><img src='/assets/images/button_help.svg' alt='help button'></button>
-</form>
+<button class="returnButton" id="myModalBtn" type="submit"><img src='/assets/images/button_help.svg' alt='help button'></button>
+
+<div id="myModal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p class="descriptionTitle">Actions Description:</p>
+    <ul class="listDescription">
+        <li class="description"><strong>PUNCH!</strong>: High accuracy, low damage</li>
+        <li class="description"><strong>KICK!</strong>: Low accuracy, high damage</li>
+        <li class="description"><strong>HEADBUTT!</strong>: High accuracy, high damages but has recoil damage</li>
+        <li class="description"><strong>TEATIME!</strong>: Restores HP</li>
+    </ul>
+  </div>
+</div>
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+// Get the button that opens the modal
+var btn = document.getElementById("myModalBtn");
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
