changed padding for modal content

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -316,7 +316,7 @@ progress {
   .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px 20%;
+    padding: 5% 5%;
     border: 1px solid #888;
     box-shadow: var(--primaryBoxShadow);
   }
