added VS to display fight

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -238,7 +238,9 @@ progress {
   .playerImage{
     height: 20vh;
   }
-
+  .vsLogo {
+    height: 5vh;
+  }
   .display {
     justify-content: center;
     align-self: center;
