--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -13,7 +13,7 @@
             </figcaption>
             <img src="/assets/images/{{player1.name|lower}}.svg" class ="playerImage">
         </figure>
-            <img src="/assets/images/vs.svg" alt="VS logo">
+            <img class="vsLogo" src="/assets/images/vs.svg" alt="VS logo">
         <figure class='player'>
             <figcaption class="playerHeader">
                 <p class='statsPlayer'> {{player2.name}}</p>
