--- a/src/View/Fight/pickFighter.html.twig
+++ b/src/View/Fight/pickFighter.html.twig
@@ -11,7 +11,7 @@
             PLAYER ONE
             {% endif %}
             <br>
-            CHOOSE YOUR FIGHTERS
+            CHOOSE YOUR FIGHTER
         </h1>
             <form class="pick" method="POST">
 
