--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -12,7 +12,7 @@
         <figcaption>WINNER 🏆: {{winner.name}} <br>❤ {{winner.life}}</figcaption>
         <img src="/assets/images/{{winner.name|lower}}.svg" class ="winnerImage">
     </figure>
-    <img src="/assets/images/vs.svg" alt="VS logo">
+
     <figure class='loser'>
         <figcaption>LOSER 💀: {{loser.name}} <br>❤ {{loser.life}}</figcaption>
         <img src="/assets/images/{{loser.name|lower}}.svg" class ="loserImage">
@@ -28,5 +28,10 @@
     </div>
 
 </div>
-
+<audio
+        controls
+        src="/assets/images/mort.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
 {% endblock %}
