add modal on credit for display linkedin and github

--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -10,16 +10,104 @@
     <h1 Class="creditTitle">Credits</h1>
 
     <ul class="creditList">
-        <li>Antoine Leclabart</li>
-        <li>Bilal Amiche</li>
-        <li>Clément Moreaux</li>
-        <li>Jordan Verreaux</li>
-        <li>Marjorie Thomassin</li>
-        <li>Robin Jonval</li>
-        <li>Romain Guillemot</li>
-        <li>Théo Drouet</li>
+        <li id="antoine">Antoine Leclabart</li>
+        <li id="bilal">Bilal Amiche</li>
+        <li id="clement">Clément Moreaux</li>
+        <li id="jordan">Jordan Verreaux</li>
+        <li id="marjorie">Marjorie Thomassin</li>
+        <li id="robin">Robin Jonval</li>
+        <li id="romain">Romain Guillemot</li>
+        <li id="theo">Théo Drouet</li>
     </ul>
 
 </section> 
 
+<div id="antoineModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li class="description"><a href="https://github.com/AntoineLeclabart" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li class="description"><a href="https://www.linkedin.com/in/antoine-leclabart-b28423221/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+      </ul>
+    </div>
+</div>
+<div id="bilalModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li><a href="https://github.com/BilalAmiche" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/bilal-amiche-54a986197/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+      </ul>
+    </div>
+</div>
+<div id="clementModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li><a href="https://github.com/080000101" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/cl%C3%A9ment-moreaux-5a8597203/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+      </ul>
+    </div>
+</div>
+<div id="jordanModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li><a href="https://github.com/N26N26N26" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></i></a></li> 
+      </ul>
+    </div>
+    </div>
+</div>
+<div id="marjorieModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li><a href="https://github.com/MarjorieThomassin" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/marjorie-thomassin-b8659a193/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+      </ul>
+    </div>
+    </div>
+</div>
+<div id="robinModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li><a href="https://github.com/nibor51" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/robin-jonval/ " target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+      </ul>
+    </div>
+    </div>
+</div>
+<div id="romainModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li><a href="https://github.com/rocambille" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/rguillemot/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+      </ul>
+    </div>
+    </div>
+</div>
+<div id="theoModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <ul>
+        <li><a href="https://github.com/JagerTheo" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/th%C3%A9o-drouet-90991b114/ " target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+      </ul>
+    </div>
+    </div>
+</div>
+  <script src="/assets/js/credit.js"></script>
+  <script src="https://kit.fontawesome.com/70941b8294.js" crossorigin="anonymous"></script>
 {% endblock content %}
+
