--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -27,8 +27,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li class="description"><a href="https://github.com/AntoineLeclabart" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li class="description"><a href="https://www.linkedin.com/in/antoine-leclabart-b28423221/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+        <li class="description">
+            <a href="https://github.com/AntoineLeclabart" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li class="description">
+            <a href="https://www.linkedin.com/in/antoine-leclabart-b28423221/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
 </div>
@@ -37,8 +45,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li><a href="https://github.com/BilalAmiche" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/bilal-amiche-54a986197/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+        <li>
+            <a href="https://github.com/BilalAmiche" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/bilal-amiche-54a986197/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
 </div>
@@ -47,8 +63,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li><a href="https://github.com/080000101" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/cl%C3%A9ment-moreaux-5a8597203/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+        <li>
+            <a href="https://github.com/080000101" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/cl%C3%A9ment-moreaux-5a8597203/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
 </div>
@@ -57,8 +81,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li><a href="https://github.com/N26N26N26" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></i></a></li> 
+        <li>
+            <a href="https://github.com/N26N26N26" target="_blank">
+               <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="#" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
     </div>
@@ -68,8 +100,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li><a href="https://github.com/MarjorieThomassin" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/marjorie-thomassin-b8659a193/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+        <li>
+            <a href="https://github.com/MarjorieThomassin" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/marjorie-thomassin-b8659a193/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
     </div>
@@ -79,8 +119,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li><a href="https://github.com/nibor51" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/robin-jonval/ " target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+        <li>
+            <a href="https://github.com/nibor51" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/robin-jonval/ " target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
     </div>
@@ -90,8 +138,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li><a href="https://github.com/rocambille" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/rguillemot/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+        <li>
+            <a href="https://github.com/rocambille" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/rguillemot/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
     </div>
@@ -101,8 +157,16 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <ul>
-        <li><a href="https://github.com/JagerTheo" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/th%C3%A9o-drouet-90991b114/ " target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+        <li>
+            <a href="https://github.com/JagerTheo" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/th%C3%A9o-drouet-90991b114/ " target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li> 
       </ul>
     </div>
     </div>
